// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features - Peer - Filter Sidebar Component should not display "Exclude Indirect Matches" filter when shouldShowExcludeIndirectJobMatchesFilter is false 1`] = `
<pf-peer-data-cut-filter-sidebar
  associatedJobs$={[Function Store]}
  excludeIndirectJobMatches$={[Function Store]}
  filterAggregateGroups$={[Function Store]}
  filterAggregateGroupsLoading$={[Function Store]}
  filterAggregateGroupsLoadingError$={[Function Store]}
  hasAdditionalJobLevels$={[Function Store]}
  limitToPayMarket$={[Function Store]}
  mapSummary$={[Function Store]}
  payMarket$={[Function Observable]}
  previewLimit$={[Function Store]}
  searchingAggregate$={[Function Store]}
  selectedExchangeJobId$={[Function Store]}
  selectionsCount$={[Function Store]}
  shouldShowExchangeScopeSelector={[Function Boolean]}
  shouldShowExcludeIndirectJobMatchesFilter="false"
  shouldShowPayMarketBoundsFilter={[Function Boolean]}
  store={[Function Store]}
>
  <div
    class="filter-sidebar"
  >
    <div
      class="filter-header"
    >
      
      
      <pf-pay-market-bounds-filter />
      
      
      <pf-scope-selector />
      <pf-peer-filter-info />
    </div>
    <div
      class="aggregate-groups-container"
    >
      
      
    </div>
  </div>
</pf-peer-data-cut-filter-sidebar>
`;

exports[`Features - Peer - Filter Sidebar Component should not display "Pay Market Only" filter when shouldShowPayMarketBoundsFilter is false 1`] = `
<pf-peer-data-cut-filter-sidebar
  associatedJobs$={[Function Store]}
  excludeIndirectJobMatches$={[Function Store]}
  filterAggregateGroups$={[Function Store]}
  filterAggregateGroupsLoading$={[Function Store]}
  filterAggregateGroupsLoadingError$={[Function Store]}
  hasAdditionalJobLevels$={[Function Observable]}
  limitToPayMarket$={[Function Store]}
  mapSummary$={[Function Store]}
  payMarket$={[Function Store]}
  previewLimit$={[Function Store]}
  searchingAggregate$={[Function Store]}
  selectedExchangeJobId$={[Function Store]}
  selectionsCount$={[Function Store]}
  shouldShowExchangeScopeSelector={[Function Boolean]}
  shouldShowExcludeIndirectJobMatchesFilter={[Function Boolean]}
  shouldShowPayMarketBoundsFilter="false"
  store={[Function Store]}
>
  <div
    class="filter-sidebar"
  >
    <div
      class="filter-header"
    >
      
      
      
      <pf-exclude-indirect-matches-filter />
      
      <pf-peer-filter-info />
    </div>
    <div
      class="aggregate-groups-container"
    >
      
      
    </div>
  </div>
</pf-peer-data-cut-filter-sidebar>
`;
